# assessment-workbench

./: .env.example  .gitignore  HANDOFF.md  LICENSE  README.en.md  README.md  README.zh-CN.md  REPORT.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_PLAN.md  architecture.md  mineru-integration.md  roadmap.md
examples/: course.yaml  exam-spec.yaml
examples/gaokao-mathematics/: README.md  blueprint.yaml  questions.yaml  run-manifest.json
examples/processbench-gsm8k/: README.md  cases.full.jsonl  cases.jsonl  observations.gemini-flash.full.jsonl  observations.gemini-flash.jsonl  report.gemini-flash.full.json  report.gemini-flash.json
examples/subject-profiles/: gaokao-mathematics.yaml
examples/verifier-benchmark/: README.md  cases.jsonl  clean.jsonl  episodes.baseline.jsonl  episodes.gemini-flash.jsonl  generate_synthetic_observations.py  observations.baseline.jsonl  observations.gemini-flash.jsonl  observations.synthetic.jsonl  preferences.baseline.jsonl  (+9 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tests/: test_agents.py  test_artifacts.py  test_assessment_models.py  test_benchmark_export.py  test_benchmark_runner.py  test_benchmarking.py  test_capabilities.py  test_cli.py  test_demo_exam.py  test_domain.py  test_exam_quality.py  test_ingestion.py  test_knowledge.py  test_latex.py  test_materials.py  test_models.py  test_parsers.py  test_pdf_inspection.py  test_planning.py  test_process_benchmark.py  test_profiles.py  test_workflow.py  test_workflow_lifecycle.py
(+58 files in other folders)
