[project]
name = "assessment-workbench"
version = "0.1.0"
description = "Auditable workflows for course-grounded exam generation and grading"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "typer>=0.12,<1",
]

[project.scripts]
assessment-workbench = "assessment_workbench.cli:app"

[dependency-groups]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "respx>=0.21,<1",
  "ruff>=0.6,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assessment_workbench"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["assessment_workbench"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
